Fix test case duration visibility (#5294)

--- a/app/src/pages/inside/testCaseLibraryPage/testCaseDetailsPage/testCaseDetailsHeader/testCaseDetailsHeader.scss
+++ b/app/src/pages/inside/testCaseLibraryPage/testCaseDetailsPage/testCaseDetailsHeader/testCaseDetailsHeader.scss
@@ -90,7 +90,7 @@
     gap: 8px;
     align-items: center;
 
-    &:last-child {
+    &:nth-child(2) {
       gap: 4px;
     }
   }
